--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <script src="js/main.js"></script>
     </head>
     <body>
+        <!-- Zorg voor een navbalk op alle pagina's. -->
         <main>
             <h1>Soon^tm</h1>
             <p>Binnenkort... \o/. Ja echt, heeeeel binnenkort. Hopefully...</p>
