--- a/profile.html
+++ b/profile.html
@@ -9,6 +9,6 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        
+        <!-- Zie notities bij index.html en dashboard.html. -->
     </body>
 </html>
