--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,5 @@
+<!-- TODO: Zet alles om tot een PHP-script i.p.v. HTML en regel een converter -->
+
 <!DOCTYPE html>
 <html>
     <head>
@@ -9,6 +11,20 @@
         <script src="js/main.js"></script>
     </head>
     <body>
-        
+        <main>
+            <h1>Dashboard</h1>
+            <p>
+                Deze pagina bevat mijn persoonlijke dashboard. Het bevat onder
+                andere een voortgangsmeter en handige links.
+            </p>
+            <h2>Studiemonitor</h2>
+            <p>
+                <!-- Voortgangsbalk, evt. een grafiek o.i.d. -->
+            </p>
+            <h2>Studiewijzer</h2>
+            <p>
+                <!-- Zorg ervoor dat links eenvoudig kunnen worden gemaakt. -->
+            </p>
+        </main>
     </body>
 </html>
