--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
     </head>
     <body>
         <!-- Zorg voor een navbalk op alle pagina's. -->
+        <nav></nav>
         <main>
-            <h1>Soon^tm</h1>
-            <p>Binnenkort... \o/. Ja echt, heeeeel binnenkort. Hopefully...</p>
-            <!-- TODO: Links & meer -->
+            <section>
+                <h1>Soon^tm</h1>
+                <p>Binnenkort... \o/. Ja echt, heeeeel binnenkort. Hopefully...</p>
+                <!-- TODO: Links & meer -->
+            </section>
         </main>
     </body>
 </html>
