--- a/dashboard.html
+++ b/dashboard.html
@@ -2,14 +2,15 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Ceci n'est pas un real dashboard yet</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-        <script src="js/main.js"></script>
-    </head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Dashboard</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+<script src="js/main.js"></script>    </head>
     <body>
-        <main>
+        <nav>
+    <a href='index.html'>Home</a><a href='profile.html'>Profile</a><a class="active"  href='dashboard.html'>Dashboard</a></nav>        <main>
+            <section>
             <h1>Dashboard</h1>
             <p>
                 Deze pagina bevat mijn persoonlijke dashboard. Het bevat onder
@@ -17,12 +18,13 @@
             </p>
             <h2>Studiemonitor</h2>
             <p>
-                <!-- Voortgangsbalk, evt. een grafiek o.i.d. -->
+                <!-- Grafiek o.i.d. -->
             </p>
             <h2>Studiewijzer</h2>
             <p>
-                <!-- Zorg ervoor dat links eenvoudig kunnen worden gemaakt. -->
+                <!-- link! -->
             </p>
+            </section>
         </main>
     </body>
 </html>
