--- a/dashboard.html
+++ b/dashboard.html
@@ -8,22 +8,21 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 <script src="js/main.js"></script>    </head>
     <body>
-        <nav>
-    <a href='index.html'>Home</a><a href='profile.html'>Profile</a><a class="active"  href='dashboard.html'>Dashboard</a></nav>        <main>
+        <nav>\n<a href='index.html'>Home</a><a href='profile.html'>Profile</a><a class="active"  href='dashboard.html'>Dashboard</a>\n</nav>        <main>
             <section>
-            <h1>Dashboard</h1>
-            <p>
-                Deze pagina bevat mijn persoonlijke dashboard. Het bevat onder
-                andere een voortgangsmeter en handige links.
-            </p>
-            <h2>Studiemonitor</h2>
-            <p>
-                <!-- Grafiek o.i.d. -->
-            </p>
-            <h2>Studiewijzer</h2>
-            <p>
-                <!-- link! -->
-            </p>
+                <h1>Dashboard</h1>
+                <p>
+                    Deze pagina bevat mijn persoonlijke dashboard. Het bevat onder
+                    andere een voortgangsmeter en handige links.
+                </p>
+                <h2>Studiemonitor</h2>
+                <p>
+                    <!-- Grafiek o.i.d. -->
+                </p>
+                <h2>Studiewijzer</h2>
+                <p>
+                    <!-- link! -->
+                </p>
             </section>
         </main>
     </body>
