+ proberen de code iets overzichterlijker te maken

--- a/dashboard.html
+++ b/dashboard.html
@@ -8,7 +8,11 @@
 <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 <script src="js/main.js"></script>    </head>
     <body>
-        <nav>\n<a href='index.html'>Home</a><a href='profile.html'>Profile</a><a class="active"  href='dashboard.html'>Dashboard</a>\n</nav>        <main>
+        <nav><a href='index.html'>Home</a>
+<a href='profile.html'>Profile</a>
+<a class="active"  href='dashboard.html'>Dashboard</a>
+</nav>
+        <main>
             <section>
                 <h1>Dashboard</h1>
                 <p>
