--- a/dashboard.html
+++ b/dashboard.html
@@ -7,19 +7,19 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 <script src="js/main.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>        
-    </head>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>    </head>
     <body>
         <nav><a href='index.html'>Home</a>
 <a href='profile.html'>Profile</a>
 <a class="active"  href='dashboard.html'>Dashboard</a>
+<a href='experiment.html'>Experimenten</a>
 </nav>
         <main>
             <section>
                 <h1>Dashboard</h1>
                 <p>
                     Deze pagina bevat mijn persoonlijke dashboard. Het bevat onder
-                    andere een voortgangsmeter en handige links.
+                    andere een studiemonitor en handige links.
                 </p>
                 <h2>Studiemonitor</h2>
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.bundle.min.js"></script>
