--- a/experiment.html
+++ b/experiment.html
@@ -2,13 +2,22 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>MOAR EXPERIMENTS</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-        <script src="js/main.js"></script>
-    </head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>MOAR EXPERIMENTS</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+<script src="js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>    </head>
     <body>
-        <p>Hallo wereld!</p>
+        <nav><a href='index.html'>Home</a>
+<a href='profile.html'>Profile</a>
+<a href='dashboard.html'>Dashboard</a>
+<a class="active"  href='experiment.html'>Experimenten</a>
+</nav>
+        <main>
+            <section>
+                <p>Hallo wereld!</p>
+            </section>
+        </main>
     </body>
 </html>
