--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Home</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-        <script src="js/main.js"></script>
-    </head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Home</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+<script src="js/main.js"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>    </head>
     <body>
-        <!-- Zorg voor een navbalk op alle pagina's. -->
-        <nav></nav>
+        <nav><a class="active"  href='index.html'>Home</a>
+<a href='profile.html'>Profile</a>
+<a href='dashboard.html'>Dashboard</a>
+<a href='experiment.html'>Experimenten</a>
+</nav>
         <main>
             <section>
                 <h1>Soon^tm</h1>
