--- a/profile.html
+++ b/profile.html
@@ -10,7 +10,7 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>    </head>
     <body>
         <nav><a href='index.html'>Home</a>
-<a class="active"  href='profile.html'>Profile</a>
+<a class="active"  href='profile.html'>Profiel</a>
 <a href='dashboard.html'>Dashboard</a>
 <a href='experiment.html'>Experimenten</a>
 </nav>
