+ gedeelte voor toetsen

--- a/dashboard.html
+++ b/dashboard.html
@@ -83,7 +83,9 @@
             }
         }
     });
-</script>                <p>
+</script>                <h3>Toetsen</h3>
+                <p>
+                    TODO. Soon^tm!
                 </p>
                 <h2>Studiewijzer</h2>
                 <p>
