--- a/dashboard.html
+++ b/dashboard.html
@@ -85,7 +85,7 @@
     });
 </script>                <h3>Toetsen</h3>
                 <p>
-                    TODO. Soon^tm!
+                    TODO. Soon^tm! <!-- In ieder geval Computer Science Basics & Programming Basics, Casus en Groepswerk -->
                 </p>
                 <h2>Studiewijzer</h2>
                 <p>
