> wijzigingen aan breedte tabel; + commentaar bij grafiek

--- a/dashboard.html
+++ b/dashboard.html
@@ -29,6 +29,32 @@
     Punten zijn gegeven per maand.
 </p>
 <script>
+    /* Plug-ins */
+    Chart.plugins.register({
+    // need to manipulate tooltip visibility before its drawn (but after update)
+    beforeDraw: function(chartInstance, easing) {
+        // check and see if the plugin is active (its active if the option exists)
+        if (chartInstance.config.options.tooltips.onlyShowForDatasetIndex) {
+        // get the plugin configuration
+        var tooltipsToDisplay = chartInstance.config.options.tooltips.onlyShowForDatasetIndex;
+
+        // get the active tooltip (if there is one)
+        var active = chartInstance.tooltip._active || [];
+
+        // only manipulate the tooltip if its just about to be drawn
+        if (active.length > 0) {
+            // first check if the tooltip relates to a dataset index we don't want to show
+            if (tooltipsToDisplay.indexOf(active[0]._datasetIndex) === -1) {
+            // we don't want to show this tooltip so set it's opacity back to 0
+            // which causes the tooltip draw method to do nothing
+            chartInstance.tooltip._model.opacity = 0;
+            }
+        }
+        }
+    }
+    });
+
+    /* Grafiekdata */
     var ctx = document.getElementById("ECGraph");
     var ECGraph = new Chart(ctx, {
         type: 'line',
@@ -42,25 +68,20 @@
             ],
             datasets: [{
                 label: "EC",
-                /* Nieuwe data:
-                    {
-                        x: datum,
-                        y: punten
-                    },
-                */
-                data: [0],
+                data: [0], // iedere waarde representeert een maand zoals beschreven bij 'labels' hierboven
                 fill: false,
                 lineTension: 0,
                 spanGaps: true,
                 borderColor: "#164225",
                 backgroundColor: "#A1B3A7"
             }, {
-                label: "NBSA-grens propedeuse",
-                data: [45,,,,,,,,,,,45],
+                label: "NBSA-grens propedeuse (45 EC)",
+                data: [45,,,,,,,,,,,45], // aug 2018 - jul 2019
                 fill: false,
                 spanGaps: true,
                 borderColor: "red",
-                backgroundColor: "#FF9999"
+                backgroundColor: "#FF9999",
+                pointHitRadius: 0
             }]
         },
         options: {
@@ -68,6 +89,16 @@
                 display: true,
                 text: 'EC verkregen over tijd',
                 padding: 10
+            },
+            tooltips: {
+                enabled: true,
+                mode: 'single',
+                onlyShowForDatasetIndex: [0],
+                callbacks: {
+                    label: function(tooltipItems, data) {
+                        return data.datasets[tooltipItems.datasetIndex].label + ': ' + tooltipItems.yLabel;
+                    }
+                }
             },
             scales: {
                 yAxes: [{
@@ -84,7 +115,7 @@
         }
     });
 </script>                <h3>Toetsen</h3>
-                <h4>2018-2019</h4><h5>Blok 1 (15,00 EC)</h5><table><thead><tr><th>Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>Opleidings- en beroepsoriëntatie</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>Computer science basics</td><td>---</td><td>7,50</td><td>0</td><td>---</td></tr><tr><td>Programming basics</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr></tbody></table><h5>Blok 2 (12,50 EC)</h5><table><thead><tr><th>Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>Object-oriented programming</td><td>---</td><td>10,00</td><td>0</td><td>---</td></tr><tr><td>Professional skills 1</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr></tbody></table><h5>Blok 3 (15,00 EC)</h5><table><thead><tr><th>Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>Professional skills 2</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>Professionele werkplek 1</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>Framework development 1</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr><tr><td>Framework project 1</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr></tbody></table><h5>Blok 4 (12,50 EC)</h5><table><thead><tr><th>Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>Professional skills 3</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>Framework project 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr><tr><td>Framework development 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr></tbody></table><h5>Overige (5,00 EC)</h5><table><thead><tr><th>Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>HZ-Personality 2a</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>IT Personality 2a</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr></tbody></table>                <h2>Studiewijzer</h2>
+                <h4>2018-2019 (60,00 EC)</h4><h5>Blok 1 (15,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>Opleidings- en beroepsoriëntatie</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>Computer science basics</td><td>---</td><td>7,50</td><td>0</td><td>---</td></tr><tr><td>Programming basics</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr></tbody></table><h5>Blok 2 (12,50 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>Object-oriented programming</td><td>---</td><td>10,00</td><td>0</td><td>---</td></tr><tr><td>Professional skills 1</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr></tbody></table><h5>Blok 3 (15,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>Professional skills 2</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>Professionele werkplek 1</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>Framework development 1</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr><tr><td>Framework project 1</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr></tbody></table><h5>Blok 4 (12,50 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>Professional skills 3</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>Framework project 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr><tr><td>Framework development 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr></tbody></table><h5>Overige (5,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody><tr><td>HZ-Personality 2a</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr><tr><td>IT Personality 2a</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr></tbody></table>                <h2>Studiewijzer</h2>
                 <p>
                     Snel naar een belangrijke pagina? Gebruik de links hieronder!
                     <ul>
