+ kenmerken en korte intro

--- a/profile.html
+++ b/profile.html
@@ -16,10 +16,20 @@
 </nav>
         <main>
             <section>
+                <h1>Over mij</h1>
                 <p>
-                    Ook hier komt binnenkort wat tekst. Nu is het nog een saaie,
-                    lege pagina. :(
+                    Ik ben Jarno Overwijk,
+                    17 jaar                    oud en volg de opleiding HBO-ICT aan de <a href="https://hz.nl">HZ</a> locatie Middelburg.
                 </p>
+                <h2>Kenmerken</h2>
+                <ol>
+                    <li>Algemeen</li>
+                    <ul>
+                        <li>Houd er totaal niet van om in de <i>spotlights</i> te staan.</li>
+                        <li>Presenteert daarom dus ook liever niet...</li>
+                        <li>Stelt met regelmaat privacy boven 'je mag alles weten'.</li>
+                    </ul>
+                </ol>
             </section>
         </main>
     </body>
