--- a/experiment.html
+++ b/experiment.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>MOAR EXPERIMENTS</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>
+    MOAR EXPERIMENTS</title>
+
 <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-<script src="js/main.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>    </head>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>    </head>
     <body>
         <nav><a href='index.html'>Home</a>
 <a href='profile.html'>Profiel</a>
@@ -17,7 +21,10 @@
         <main>
             <section>
                 <p>Hallo wereld!</p>
-            </section>
+                <p class="small_right copy">
+    ©2018</br>
+    <a href="sitemap.php" title="Sitemap">sitemap</a>
+</p>            </section>
         </main>
     </body>
 </html>
