--- a/profile.html
+++ b/profile.html
@@ -3,11 +3,15 @@
     <head>
         <meta charset="utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Profiel</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+
+<title>
+    Profiel</title>
+
 <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
-<script src="js/main.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>    </head>
+
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+<script src="js/main.js"></script>    </head>
     <body>
         <nav><a href='index.html'>Home</a>
 <a class="active"  href='profile.html'>Profiel</a>
@@ -29,8 +33,11 @@
                         <li>Presenteert daarom dus ook liever niet...</li>
                         <li>Stelt met regelmaat privacy boven 'je mag alles weten'.</li>
                     </ul>
-                </ol>
-            </section>
+                </ol> <!-- TODO: uitbreiden met meer kenmerken en een afbeelding -->
+                <p class="small_right copy">
+    ©2018</br>
+    <a href="sitemap.php" title="Sitemap">sitemap</a>
+</p>            </section>
         </main>
     </body>
 </html>
