--- a/dashboard.html
+++ b/dashboard.html
@@ -34,6 +34,8 @@
 </p>
 <script>
     /* Plug-ins */
+
+    /* Toon labels van bepaalde lijnen niet */
     Chart.plugins.register({
     // need to manipulate tooltip visibility before its drawn (but after update)
     beforeDraw: function(chartInstance, easing) {
@@ -94,6 +96,7 @@
                 text: 'EC verkregen over tijd',
                 padding: 10
             },
+            // Toon alleen label van lijn 0 (oftewel de EC-lijn)
             tooltips: {
                 enabled: true,
                 mode: 'single',
@@ -141,7 +144,7 @@
                 </p>
                 <p class="small_right copy">
     ©2018</br>
-    <a href="sitemap.php" title="Sitemap">sitemap</a>
+    <a href="sitemap.html" title="Sitemap">sitemap</a>
 </p>            </section>
         </main>
     </body>
