--- a/experiment.html
+++ b/experiment.html
@@ -23,7 +23,7 @@
                 <p>Hallo wereld!</p>
                 <p class="small_right copy">
     ©2018</br>
-    <a href="sitemap.php" title="Sitemap">sitemap</a>
+    <a href="sitemap.html" title="Sitemap">sitemap</a>
 </p>            </section>
         </main>
     </body>
