--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <!-- TODO: Links & meer -->
                 <p class="small_right copy">
     ©2018</br>
-    <a href="sitemap.php" title="Sitemap">sitemap</a>
+    <a href="sitemap.html" title="Sitemap">sitemap</a>
 </p>            </section>
         </main>
     </body>
