> postprocessing werkend gemaakt

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <main>
             <section>
                 <h1>Soon^tm</h1>
-                <p>Binnenkort... \o/. Ja echt, heeeeel binnenkort. Hopefully...</p>
+                <p>Binnenkort... \o/. Ja echt, heeeeel binnenkort. Hopefully... Testing...</p>
                 <!-- TODO: Links & meer -->
                 <p class="small_right copy">
     ©2018</br>
-    <a href="sitemap.html" title="Sitemap">sitemap</a>
+    <a href="sitemap.xml" title="Sitemap">sitemap</a>
 </p>            </section>
         </main>
     </body>
