--- a/dashboard.html
+++ b/dashboard.html
@@ -144,7 +144,7 @@
                 </p>
                 <p class="small_right copy">
     ©2018</br>
-    <a href="sitemap.html" title="Sitemap">sitemap</a>
+    <a href="sitemap.xml" title="Sitemap">sitemap</a>
 </p>            </section>
         </main>
     </body>
