--- a/profile.html
+++ b/profile.html
@@ -36,7 +36,7 @@
                 </ol> <!-- TODO: uitbreiden met meer kenmerken en een afbeelding -->
                 <p class="small_right copy">
     ©2018</br>
-    <a href="sitemap.html" title="Sitemap">sitemap</a>
+    <a href="sitemap.xml" title="Sitemap">sitemap</a>
 </p>            </section>
         </main>
     </body>
