+ tekst op homepagina

--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
 <script src="js/main.js"></script>    </head>
     <body>
         <nav><a href='index.html'>Home</a>
-<a class="active"  href='profile.html'>Profiel</a>
+<a class="active"  href='profile.html'>Over mij</a>
 <a href='dashboard.html'>Dashboard</a>
 <a href='experiment.html'>Experimenten</a>
 </nav>
@@ -34,7 +34,7 @@
                         <li>Stelt met regelmaat privacy boven 'je mag alles weten'.</li>
                     </ul>
                 </ol> <!-- TODO: uitbreiden met meer kenmerken en een afbeelding -->
-                <p class="small_right copy">
+                <p class="small_right copy clear">
     ©2018</br>
     <a href="sitemap.xml" title="Sitemap">sitemap</a>
 </p>            </section>
