--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
 <script src="js/main.js"></script>    </head>
     <body>
         <nav><a href='index.html'>Home</a>
-<a href='profile.html'>Profiel</a>
+<a href='profile.html'>Over mij</a>
 <a class="active"  href='dashboard.html'>Dashboard</a>
 <a href='experiment.html'>Experimenten</a>
 </nav>
@@ -142,7 +142,7 @@
                         </ul>
                     </ul>
                 </p>
-                <p class="small_right copy">
+                <p class="small_right copy clear">
     ©2018</br>
     <a href="sitemap.xml" title="Sitemap">sitemap</a>
 </p>            </section>
