--- a/experiment.html
+++ b/experiment.html
@@ -14,14 +14,14 @@
 <script src="js/main.js"></script>    </head>
     <body>
         <nav><a href='index.html'>Home</a>
-<a href='profile.html'>Profiel</a>
+<a href='profile.html'>Over mij</a>
 <a href='dashboard.html'>Dashboard</a>
 <a class="active"  href='experiment.html'>Experimenten</a>
 </nav>
         <main>
             <section>
                 <p>Hallo wereld!</p>
-                <p class="small_right copy">
+                <p class="small_right copy clear">
     ©2018</br>
     <a href="sitemap.xml" title="Sitemap">sitemap</a>
 </p>            </section>
