+ motivatie.php; > wijzig hoe navigatiebalk werkt; > sitemap bijgewerkt

--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,8 @@
     <body>
         <nav><a href='index.html'>Home</a>
 <a href='profile.html'>Over mij</a>
-<a class="active"  href='dashboard.html'>Dashboard</a>
+<a class="active" href='dashboard.html'>Dashboard</a>
+<a href='motivation.html'>Motivatie</a>
 <a href='experiment.html'>Experimenten</a>
 </nav>
         <main>
