--- a/motivation.html
+++ b/motivation.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>
-    MOAR EXPERIMENTS</title>
+    Motivatie</title>
 
 <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 
@@ -16,12 +16,12 @@
         <nav><a href='index.html'>Home</a>
 <a href='profile.html'>Over mij</a>
 <a href='dashboard.html'>Dashboard</a>
-<a href='motivation.html'>Motivatie</a>
-<a class="active" href='experiment.html'>Experimenten</a>
+<a class="active" href='motivation.html'>Motivatie</a>
+<a href='experiment.html'>Experimenten</a>
 </nav>
         <main>
             <section>
-                <p>Hallo wereld!</p>
+            
                 <p class="small_right copy clear">
     ©2018</br>
     <a href="sitemap.xml" title="Sitemap">sitemap</a>
