--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 <script src="js/main.js"></script>    </head>
     <body>
-        <nav><a class="active"  href='index.html'>Home</a>
+        <nav><a class="active" href='index.html'>Home</a>
 <a href='profile.html'>Over mij</a>
 <a href='dashboard.html'>Dashboard</a>
+<a href='motivation.html'>Motivatie</a>
 <a href='experiment.html'>Experimenten</a>
 </nav>
         <main>
@@ -60,6 +61,7 @@
                         te blijven gaan na verschillende tegenslagen.
                     </p>
                 </div>
+                <!-- TODO: afbeeldingen, eventueel links -->
                 <p class="small_right copy clear">
     ©2018</br>
     <a href="sitemap.xml" title="Sitemap">sitemap</a>
