--- a/profile.html
+++ b/profile.html
@@ -14,8 +14,9 @@
 <script src="js/main.js"></script>    </head>
     <body>
         <nav><a href='index.html'>Home</a>
-<a class="active"  href='profile.html'>Over mij</a>
+<a class="active" href='profile.html'>Over mij</a>
 <a href='dashboard.html'>Dashboard</a>
+<a href='motivation.html'>Motivatie</a>
 <a href='experiment.html'>Experimenten</a>
 </nav>
         <main>
