--- a/motivation.html
+++ b/motivation.html
@@ -21,7 +21,7 @@
 </nav>
         <main>
             <section>
-            
+                <p>SOON!</p>
                 <p class="small_right copy clear">
     ©2018</br>
     <a href="sitemap.xml" title="Sitemap">sitemap</a>
