+ afbeeldingen in index

--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
                     Ah. Je hebt deze pagina kunnen vinden tussen alle URL's en/of
                     zoekresultaten die het internet rijk is. <i>Good</i>.
                 </p>
+                <p>
+                    Voordat je verder gaat lezen, ik ben Jarno Overwijk. Lees wat
+                    meer over mij op <a href="profile.html" title="Profiel">deze
+                    pagina</a>. Dit zou, als het goed is, de onderstaande tekst
+                    beter te begrijpen maken.
+                </p>
                 <div class="left_half">
                     <h5>Waarom de opleiding bij mij past</h5>
                     <p>
@@ -61,7 +67,21 @@
                         te blijven gaan na verschillende tegenslagen.
                     </p>
                 </div>
-                <!-- TODO: afbeeldingen, eventueel links -->
+                <h2 class="clear">Over deze website</h2>
+                <p>
+                    Deze website dient als een soort portfolio van mijn opleiding
+                    en wordt, als het goed is, 'regelmatig' bijgewerkt. Verder is
+                    deze website geschreven in PHP, met stijl gedefinieerd in CSS,
+                    wat JavaScript erbij en wordt de pagina omgezet naar HTML om
+                    te tonen in GitHub Pages, omdat deze applicatie PHP niet
+                    ondersteunt.
+                </p>
+                <div class="center_image_wrapper">
+                    <img class="float_center_image" src="https://upload.wikimedia.org/wikipedia/commons/2/27/PHP-logo.svg" height="50px" title="PHP-logo" alt="PHP-logo">
+                    <img class="float_center_image" src="https://upload.wikimedia.org/wikipedia/commons/3/3d/CSS.3.svg" height="50px" title="CSS3-logo" alt="CSS3-logo">
+                    <img class="float_center_image" src="https://upload.wikimedia.org/wikipedia/commons/b/b6/Badge_js-strict.svg" height="50px" title="JavaScript-logo" alt="JavaScript-logo">
+                    <img class="float_center_image" src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" height="50px" title="HTML5-logo" alt="HTML5-logo">
+                </div>
                 <p class="small_right copy clear">
     ©2018</br>
     <a href="sitemap.xml" title="Sitemap">sitemap</a>
