--- a/dashboard.html
+++ b/dashboard.html
@@ -126,23 +126,23 @@
                 <p>
                     Bron: <a href="https://apps.hz.nl/angular/studievoortgang/studievoortgang" title="Studievoortgang">Studievoortgang</a>
                 </p>
-                <h4>2018-2019 (60,00 EC)</h4><h5>Blok 1 (15,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
+                <h4>2018-2019 (60,00 EC)</h4><h5>Blok 1 (15,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
 <tr><td>Opleidings- en beroepsoriëntatie</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
 <tr><td>Computer science basics</td><td>---</td><td>7,50</td><td>0</td><td>---</td></tr>
 <tr><td>Programming basics</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
-</tbody></table><h5>Blok 2 (12,50 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
+</tbody></table><h5>Blok 2 (12,50 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
 <tr><td>Object-oriented programming</td><td>---</td><td>10,00</td><td>0</td><td>---</td></tr>
 <tr><td>Professional skills 1</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
-</tbody></table><h5>Blok 3 (15,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
+</tbody></table><h5>Blok 3 (15,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
 <tr><td>Professional skills 2</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
 <tr><td>Professionele werkplek 1</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
 <tr><td>Framework development 1</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
 <tr><td>Framework project 1</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
-</tbody></table><h5>Blok 4 (12,50 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
+</tbody></table><h5>Blok 4 (12,50 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
 <tr><td>Professional skills 3</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
 <tr><td>Framework project 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
 <tr><td>Framework development 2</td><td>---</td><td>5,00</td><td>0</td><td>---</td></tr>
-</tbody></table><h5>Overige (5,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Toets</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
+</tbody></table><h5>Overige (5,00 EC)</h5><table class="ec_table"><thead><tr><th class="equal_width_fcol">Onderdeel</th><th>Resultaat</th><th>EC-waarde</th><th>EC virtueel</th><th>EC vastgesteld</th></tr></thead><tbody>
 <tr><td>HZ-Personality 2a</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
 <tr><td>IT Personality 2a</td><td>---</td><td>2,50</td><td>0</td><td>---</td></tr>
 </tbody></table>                <h2>Studiewijzer</h2>
