--- a/experiment.html
+++ b/experiment.html
@@ -6,12 +6,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <title>
-    MOAR EXPERIMENTS</title>
+    Experimenten</title>
 
 <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="js/main.js"></script>    </head>
+<script src="js/main.js"></script>        <link rel="stylesheet" type="text/css" media="screen" href="css/experiments.css" />
+    </head>
     <body>
         <nav><a href='index.html'>Home</a>
 <a href='profile.html'>Over mij</a>
@@ -21,7 +22,46 @@
 </nav>
         <main>
             <section>
-                <p>Hallo wereld!</p>
+                <h1>SLO1.3: CSS Fun</h1>
+                <p>
+                    Dit gedeelte dient als uitwerking voor SLO1.3.
+                </p>
+                <h5>Onderwerp 1: Box-model</h5>
+                <div class="superbox">
+                    <div class="left_box_s1">
+                        Linkerbox
+                    </div>
+                    <div class="right_box_s1">
+                        Rechterbox
+                    </div>
+                </div>
+                <h5>Onderwerp 2: Lay-out</h5>
+                <div class="superbox">
+                    <div class="top_box_s2">
+                        Dit is mijn hoofd
+                    </div>
+                    <div class="bottom_box_s2">
+                        Content
+                    </div>
+                </div>
+                <h5>Onderwerp 3: CSS transformations</h5>
+                <div class="superbox">
+                    <div class="left_box_s3">
+                        Linkerbox
+                    </div>
+                    <div class="right_box_s3">
+                        Rechterbox
+                    </div>
+                </div>
+                <h5>Onderwerp 4: CSS animations</h5>
+                <div class="superbox">
+                    <div class="left_box_s4">
+                        Linkerbox
+                    </div>
+                    <div class="right_box_s4">
+                        Rechterbox
+                    </div>
+                </div>
                 <p class="small_right copy clear">
     ©2018</br>
     <a href="sitemap.xml" title="Sitemap">sitemap</a>
