> fx link naar OER en statuut

--- a/dashboard.html
+++ b/dashboard.html
@@ -149,8 +149,8 @@
                 <p>
                     Snel naar een belangrijke pagina? Gebruik de links hieronder!
                     <ul>
-                        <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen" title="Onderwijs- en examenregelingen">Onderwijs- en examenregelingen</a></li>
-                        <li><a href="https://hz.nl/over-de-hz/regelingen-documenten-1/onderwijs-en-examenregelingen" title="Studentenstatuut">Studentenstatuut</a></li>
+                        <li><a href="https://hz.nl/uploads/documents/Regelingen/NL/Onderwijs-examenregelingen/OER-HZ-2018-2019docv2018-06-26DEFCvB-V-01.pdf" title="Onderwijs- en examenregelingen">Onderwijs- en examenregelingen</a></li>
+                        <li><a href="https://hz.nl/uploads/documents/Regelingen/NL/Onderwijs-examenregelingen/Studentenstatuut/Studentenstatuut-HZ-University-of-Applied-Sciences.pdf" title="Studentenstatuut">Studentenstatuut</a></li>
                         <li><a href="https://learn.hz.nl" title="Digitale leeromgeving">Digitale leeromgeving</a></li>
                         <li><a href="https://apps.hz.nl/angular/studievoortgang/studiestatus" title="Studiestatus">Studiestatus</a></li>
                         <li><a href="https://hz-hbo-ict.slack.com/" title="Opleidingsslack">Opleidingsslack</a></li>
