--- a/motivation.html
+++ b/motivation.html
@@ -8,6 +8,7 @@
 <title>
     Motivatie</title>
 
+<link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
 
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
