> betere uitwerking onderwerp 2

--- a/experiment2.html
+++ b/experiment2.html
@@ -6,13 +6,24 @@
         <title>Experiment II</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
-        <link rel="stylesheet" type="text/css" media="screen" href="css/experiments.css" />
+        <link rel="stylesheet" type="text/css" media="screen" href="css/experiments2.css" />
         <script src="js/main.js"></script>
     </head>
-    <body class="main_box_s2">
-        <div class="top_box_s2">
-            <p>Dit is mijn hoofd</p>
-        </div>
-        <p>Content</p>
+    <body>
+        <header>
+            <p>
+                Dit is mijn hoofd
+            </p>
+        </header>
+        <nav>
+            <p>
+                Sidebar
+            </p>
+        </nav>
+        <main>
+            <p>
+                Content
+            </p>
+        </main>
     </body>
 </html>
