--- a/experiment.html
+++ b/experiment.html
@@ -10,18 +10,17 @@
 
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"/>
 <link rel="stylesheet" type="text/css" media="screen" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-<link rel="stylesheet" type="text/css" media="screen" href="css/main.css"/>
-<link rel="stylesheet" type="text/css" media="screen" href="css/responsive.css"/>
+<link rel="stylesheet" type="text/css" media="screen" href="/css/main.css"/>
+<link rel="stylesheet" type="text/css" media="screen" href="/css/responsive.css"/>
 
-<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-<script src="js/responsive.js"></script>        <link rel="stylesheet" type="text/css" media="screen" href="css/experiments.css" />
+<script src="/js/responsive.js"></script>        <link rel="stylesheet" type="text/css" media="screen" href="/css/experiments.css" />
     </head>
     <body>
-        <nav class="nav_js" id="responsive_nav"><a href='index.html'>Home</a>
-<a href='profile.html'>Over mij</a>
-<a href='dashboard.html'>Dashboard</a>
-<a href='motivation.html'>Motivatie</a>
-<a class="active" href='experiment.html'>Experimenten</a>
+        <nav class="nav_js" id="responsive_nav"><a href='/index.html'>Home</a>
+<a href='/profile.html'>Over mij</a>
+<a href='/dashboard.html'>Dashboard</a>
+<a href='/motivation.html'>Motivatie</a>
+<a class="active" href='/experiment.html'>Experimenten</a>
 <a href="javascript:void(0);" class="nav_icon" onclick="show_nav_dropdown()"><i class="fa fa-bars"></i></a></nav>
         <main>
             <section>
@@ -40,7 +39,7 @@
                 </div>
                 <h5>Onderwerp 2: Lay-out</h5>
                 <p>
-                    Zie <a href="experiment2.html">deze pagina</a>. Hier is ook
+                    Zie <a href="/experiment2.html">deze pagina</a>. Hier is ook
                     een zijbalk aan toegevoegd.
                 </p>
                 <h5>Onderwerp 3: CSS transformations</h5>
@@ -63,7 +62,7 @@
                 </div>
                 <p class="small_right copy clear">
     ©2018</br>
-    <a href="sitemap.xml" title="Sitemap">sitemap</a>
+    <a href="/sitemap.xml" title="Sitemap">sitemap</a>
 </p>            </section>
         </main>
     </body>
